--- a/en/speare.html
+++ b/en/speare.html
@@ -57,7 +57,7 @@ w {color:#ffc8c8; font-weight: bold;}
 <p><ul>
 <li>Ultra lightweight.</li>
 <li>Well designed workspace management. Intuitive and concise.</li>
-<li>High performance when managing large amount of files.</li>
+<li>High performance when managing large amount of files for big projects.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
 <li>Supports 90+ programming languages syntax highlighting and parsing.</li>
