--- a/en/iq.html
+++ b/en/iq.html
@@ -32,8 +32,7 @@
     </div>
     
 
-
-<h2>The app assesses various components of intelligence, including:</h2>
+<h2>This test assesses various components of intelligence, including:</h2>
 <p>
 A: Ability to distinguish consciousness.<br>
 B: Ability to distinguish similar.<br>
@@ -65,10 +64,11 @@ F: Learn &amp; abstract reasoning.<br>
 
 <h2>References:</h2>
 <p><a href="https://en.wikipedia.org/wiki/Raven's_Progressive_Matrices">  → Raven's Progressive Matrices on wikipedia.</a> <br></p>
-<p>Download the funny app from App Store: <br><br><a class="appstore_download_link" href="https://itunes.apple.com/us/app/mr-iq/id1302783378?ls=1&mt=8"></a> 
+<p><lt>Mr.IQ</lt> has two version, one for Macintosh (macOS), and the another designed for iPhone and iPad,
+download the funny app from App Store: <br><br><a class="appstore_download_link" href="https://itunes.apple.com/us/app/mr-iq/id1302783378?ls=1&mt=8"></a>
 <br></p>
-<p><br><br><br><br></p>
-
+<p><br><br></p>
+<p>If you can't open the link above, please launch App Store and found <lt>Mr.IQ</lt> by searching.</p>
 
 <h2>Screenshots:</h2>
 <div class="screenshots">
@@ -88,6 +88,9 @@ F: Learn &amp; abstract reasoning.<br>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="../images/iq/3.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/iq/4.png" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
