--- a/en/debugger.html
+++ b/en/debugger.html
@@ -89,6 +89,21 @@ Watches used to evaluate variable or expression and their values can be real-tim
 Screenshot of debugging <a href="https://wordpress.org/" target="_blank">WordPress</a> in Speare code editor.
 </p>
 
+<h2>Ruby Debuggers</h2>
+<p>Speare supports debugging all kinds of Ruby development, mruby/c and mruby, Ruby and Ruby on Rails, please refer this document <a href="http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf" target="_blank">http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf</a>.<br><br>
+
+<b>mruby Debuggers for <a href="https://mruby.org/" target="_blank">mruby</a></b>, the lightweight Ruby VM:<br>
+<a href="http://www.sevenuc.com/download/mruby_debugger_2.0.1.tar.gz">mruby_debugger_2.0.1.tar.gz</a> (362KB) for mruby 2.0.1<br>
+(SHA256: 203cab73bd11a4996c6909be2ce5ceae7e3c6cc61708b4bef362ca0586495c45)<br>
+<a href="http://www.sevenuc.com/download/mruby_debugger_2.1.0.tar.gz">mruby_debugger_2.1.0.tar.gz</a> (370KB) for mruby 2.1.0<br>
+(SHA256: 7e2b9e2818c7aa897d3624acd7aa564369e1cfce603e984c2b7ab632709054a9)<br>
+<a href="http://www.sevenuc.com/download/mruby_debugger_2.1.2.tar.gz">mruby_debugger_2.1.2.tar.gz</a> (368KB) for mruby 2.1.2<br>
+(SHA256: cd4872c99436d0feb603e052c37380a46030fcfcab0707da28980359c2987edb)<br>
+<a href="http://www.sevenuc.com/download/mruby_debugger_3.0.0.tar.gz">mruby_debugger_3.0.0.tar.gz</a> (440KB) for mruby 3.0.0<br>
+(SHA256: f6f47a6bcf94390c950a9902f15f3d34c3295125d1dcca47f27c6d682f3ccef6)<br>
+</p>
+
+
 <h2>About Software Industry</h2>
 <p>They obviously know a technology is garbage, a project shouldn't be started, but they don’t have enough courage to admit the mistake, correct the mistake, cancel the project and abandon that technology.
 On the contrary, they not only want to recover their cost, they even drag customers into big mud puddle and even promote their big lies to make money.
