--- a/en/debugger.html
+++ b/en/debugger.html
@@ -70,15 +70,15 @@ You can set the socket communication port number both used by Debug Server and t
 Watches used to evaluate variable or expression and their values can be real-time showing in stack-view when debugging session paused, the nodes normally has a green colour and always placed on the top of stack-view.
 </p>
 
-<span class="warning">Caution: </span><br>
-<ul><li><span class="warning">a.</span><lt> Please ensure all source files have been dragged in the left side Treeview (Workspace Explorer) before start a debug session, because macOS app can't be allowed to access files outside of its sandbox.</lt></li>
-<li><span class="warning">b.</span><lt> When your source code file moved to another folder, you must drag the source code folder in Speare again then the debugging can correctly work.</lt></li></ul>
+<span><b>Caution:</b></span><br>
+<ul><li><span>Please ensure all source files have been dragged in the left side Treeview (Workspace Explorer) before start a debug session, because macOS app can't be allowed to access files outside of its sandbox.</span></li>
+<li><span>When your source code file moved to another folder, you must drag the source code folder in Speare again then the debugging can correctly work.</span></li></ul>
 
 
 <h2>Debugger Architecture</h2>
 <a href="../images/speare/debugger.png" target="_blank"><img src="../images/speare/debugger.png" class="screenshots"/></a><br>
 <p><lt>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</lt></p>
-<p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
+<p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Java, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
 
 <h2>Debugging code with Speare code editor</h2>
 <p>Speare code editor provides an intuitive debugging environment allows adding breakpoints and the execution flow can be viewed and controlled and has the abilities that an IDE debugger will give you over trace execution in code, view the call stack at any point in time, giving you a context for your current stack frame, step into libraries or sub modules that you want to tracing the debug symbols, and change variable values while the program is running. It provides simple interfaces that can be integrated with any command line tools without boring configuration, giving you the flexibility you need to debug code at hand. The debuggers of Speare code editor, the source-level debuggers, helps you step through the code line by line and observe the runtime behaviour of your program and got a better understanding of your code.
