--- a/en/debugger.html
+++ b/en/debugger.html
@@ -49,8 +49,8 @@ The ultra light code editor.
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found <lt>"Speare"</lt> by searching.</p>
 
-<p><a href="../images/speare/llvm_in_speare_code_editor.png" target="_blank"><img src="../images/speare/llvm_in_speare_code_editor.png" class="screenshots"/></a><br>
-Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare code editor.
+<p><a href="../images/speare/llvm_in_speare_code_editor.png" target="_blank"><img src="../images/speare/llvm_in_speare_code_editor.png" class="screenshots"/></a><br><br>
+Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> with instant diff operation in Speare code editor.
 </p>
 
 
@@ -71,13 +71,13 @@ Watches used to evaluate variable or expression and their values can be real-tim
 </p>
 
 <span><b>Caution:</b></span><br>
-<ul><li><span>Please ensure all source files have been dragged in the left side Treeview (Workspace Explorer) before start a debug session, because macOS app can't be allowed to access files outside of its sandbox.</span></li>
-<li><span>When your source code file moved to another folder, you must drag the source code folder in Speare again then the debugging can correctly work.</span></li></ul>
+<ul><li><span>Please ensure all source files have been dragged in the workspace before start a debug session, because macOS app can't be allowed to access files outside of its sandbox.</span></li>
+<li><span>When your source code file moved to another folder, debugging source code operation requires to drag the project folder in Speare again then the debugging can correctly work.</span></li></ul>
 
 
 <h2>Debugger Architecture</h2>
 <a href="../images/speare/debugger.png" target="_blank"><img src="../images/speare/debugger.png" class="screenshots"/></a><br>
-<p><lt>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</lt></p>
+<p><lt><i>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</i></lt></p>
 <p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Java, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
 
 <h2>Debugging code with Speare code editor</h2>
@@ -92,7 +92,7 @@ Screenshot of debugging <a href="https://wordpress.org/" target="_blank">WordPre
 <h2>Ruby Debuggers</h2>
 <p>Speare supports debugging all kinds of Ruby development, mruby/c and mruby, Ruby and Ruby on Rails, please refer this document <a href="http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf" target="_blank">http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf</a>.<br><br>
 
-<b>mruby Debuggers for <a href="https://mruby.org/" target="_blank">mruby</a></b>, the lightweight Ruby VM:<br>
+<b>mruby debuggers for <a href="https://mruby.org/" target="_blank">mruby</a></b>, the lightweight implementation of the Ruby programming language:<br>
 <a href="http://www.sevenuc.com/download/mruby_debugger_2.0.1.tar.gz">mruby_debugger_2.0.1.tar.gz</a> (362KB) for mruby 2.0.1<br>
 (SHA256: 203cab73bd11a4996c6909be2ce5ceae7e3c6cc61708b4bef362ca0586495c45)<br>
 <a href="http://www.sevenuc.com/download/mruby_debugger_2.1.0.tar.gz">mruby_debugger_2.1.0.tar.gz</a> (370KB) for mruby 2.1.0<br>
@@ -106,7 +106,7 @@ Screenshot of debugging <a href="https://wordpress.org/" target="_blank">WordPre
 
 <h2>About Software Industry</h2>
 <p>They obviously know a technology is garbage, a project shouldn't be started, but they don’t have enough courage to admit the mistake, correct the mistake, cancel the project and abandon that technology.
-On the contrary, they not only want to recover their cost, they even drag customers into big mud puddle and even promote their big lies to make money.
+On the contrary, they not only want to recover their cost, they even drag customers into big mud puddle and even promote their big lies to make money.<br>
 </p>
 
 
@@ -133,7 +133,7 @@ On the contrary, they not only want to recover their cost, they even drag custom
 <h2>The Tao and Kung Fu of Programming</h2>
 <p><i><b>Why all attempts failed?</b> They want to create new programming language to resolve problem in software industry, but all attempts failed. Any new programming language that intended to achieve a seamless translation from Lisp (or Lisp like language, e.g Javascript) to native executable code will failed at final. The product quality of the software industry is directly proportional to the number of experienced C programming experts, but experienced C developer and C ninja are rare and rare, because only a few people can walk on this difficult way. C is really unsafe and really difficult to master, to be a mature C developer or an C expert, a developer may needs about ten years to continually experience it. Programming is difficult, there is no shortcuts for programming, programming language itself can't resolve it. Programming in C++ is not essential, but mast how to OOP in C++ is essential, there's no any other language can replace the importance of it and no any shortcut to bypass OOP with it, master OOP in C++ and then you can better programming in other high-level languages. Only the honest and continuous improving of the skills of OOP is the reliable way. Only the honest and continuous improving of the skills of C programming is the reliable way.<br><br>
 <span class="green">"C + elegant scripting language" is the reliable, efficient and flexible extending solution.</span><br><br>
-If you can't write quality C code, that means you're not a real programmer. Most developer have never written a real C software in their life, <gr>I wish more and more developer use Speare code editor to develop efficient and excellent software with C instead of current popular bloated programming languages.</gr></i><br><br>
+If you can't write quality C code, that means you're not a real programmer. Most developer have never written a real C software in their life, I wish more and more developer use Speare code editor to develop efficient and excellent software with C instead of current popular bloated programming languages.</i><br><br>
 </p>
 
 
