--- a/en/debugger.html
+++ b/en/debugger.html
@@ -86,7 +86,7 @@ Watches used to evaluate variable or expression and their values can be real-tim
 
 <p>
 <a href="../images/speare/debug_wordpress_in_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_wordpress_in_speare_code_editor.png" class="screenshots"/></a><br>
-Screenshot of debugging <a href="https://wordpress.org/" target="_blank">WordPress</a> in Speare code editor.
+Speare code editor is a small PHP IDE well-supported all kinds of PHP development, the above is a screenshot of debugging <a href="https://wordpress.org/" target="_blank">WordPress</a> in Speare code editor.
 </p>
 
 <h2>Ruby Debuggers</h2>
