--- a/en/debugger.html
+++ b/en/debugger.html
@@ -96,7 +96,7 @@ Speare code editor is a small PHP IDE that well support all kinds of PHP develop
 <a href="http://www.sevenuc.com/download/lua_debugger.tar.gz">http://www.sevenuc.com/download/lua_debugger.tar.gz (801KB)</a><br>
 (SHA256: b43ccdb91b86ec9e479670f1b2916e9e9c49eb7a6cc5192f2ba87525f751b861)<br><br>
 
-Speare code editor support various game engine and frameworks, such as the LÖVE 2D, Moai open source game engine, the Gideros mobile game platform, the Corona 2D game engine, the Marmalade game engine, the Cocos2d and cocos2d-x game engine, the OpenResty Nginx web server and the Lapis web framework, the high performance Prosody instant message server, the Torch machine learning framework, and the Redis open source database etc.
+Speare code editor support various game engine and frameworks, such as the LÖVE 2D, Moai open source game engine, the Gideros mobile game platform, the Corona 2D game engine, the Marmalade game engine, the Cocos2d and cocos2d-x game engine, the OpenResty Nginx web server and the Lapis web framework, the high performance Prosody instant message server, the JUCI Webgui for embedded devices, the Torch machine learning framework, and the Redis open source database etc.
 <br><br></p>
 
 
