--- a/en/speare.html
+++ b/en/speare.html
@@ -180,7 +180,7 @@ b. Click menu: "Command" → "Syntax Checking &amp; Run".<br>
 
 
 <h2>Add a New Colour Scheme</h2>
-&nbsp;&nbsp;&nbsp;&nbsp; colour scheme boilerplate:<br>
+&nbsp;&nbsp;&nbsp;Colour scheme boilerplate:<br>
 <div class="block">
 # 1. file must be UTF-8 encoding<br>
 # 2. line starts with character '#' is comment<br>
@@ -209,7 +209,9 @@ number: #abb2bf<br>
 </div>
 </p>
 
-<p>Please save the above content as a plain text file, e.g schemeX.txt, and directly edit the colour values to fit a new style, then put it under the colorschemes directory.
+<p>Please save the above content as a plain text file, e.g schemeX.txt, and directly edit the colour values to fit a new style, then put it under the following directory:<br>
+<lt>~/Library/Application Scripts/com.sevenuc.speareeditor/colorschemes/</lt><br>
+Some reference schemes can be downloaded from here: <a href="http://www.sevenuc.com/download/colorschemes.tar.gz">colorschemes.tar.gz</a> and you can put it under the above directory as a reference.
 </p>
 
 <h2>Code Formatter/Code Beautifier</h2>
